--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,11 @@
 <resources>
-    <string name="app_name">PruebaDiens</string>
+    <string name="app_name">Peliculas</string>
     <string name="action_settings">Settings</string>
     <string name="fragment_list_tag">List Fragment</string>
     <string name="info">Info</string>
+    <string name="close_dialog">Aceptar</string>
+    <string name="tab_one">POPULAR</string>
+    <string name="tab_two">TOP RATED</string>
+    <string name="tab_three">UPCOMING</string>
 
 </resources>
